--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
+    implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
 //    implementation 'com.google.android.material:material:1.1.0-alpha01'
 }
