--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
+                android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
