--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'org.apache.commons:commons-io:1.3.2'
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
-    implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
+    // implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
 }
