--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.pierbezuhoff.dodeca">
 
-    <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" /> -->
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -13,7 +14,7 @@
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
-                android:screenOrientation="portrait"
+                android:screenOrientation="locked"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -27,11 +28,9 @@
                         android:mimeType="*/*"
                         android:pathPattern=".*\\.ddu"
                         android:scheme="content"/>
-
                 <action android:name="android.intent.action.VIEW"/>
-
                 <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <!--<category android:name="android.intent.category.BROWSABLE"/>-->
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity">
