--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.pierbezuhoff.dodeca">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" /> -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <!-- <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" /> -->
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -22,21 +24,26 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter>
+
                 <!-- TODO: try opening .ddu -->
                 <data
                         android:host="*"
                         android:mimeType="*/*"
                         android:pathPattern=".*\\.ddu"
                         android:scheme="content"/>
+
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
-                <!--<category android:name="android.intent.category.BROWSABLE"/>-->
+                <!-- <category android:name="android.intent.category.BROWSABLE"/> -->
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".DDUChooserActivity">
         </activity>
     </application>
 
