--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -37,6 +38,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
+    implementation "com.github.hotchemi:permissionsdispatcher:4.1.0"
+    kapt "com.github.hotchemi:permissionsdispatcher-processor:4.1.0"
     implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
     // implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
 }
