--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
-    implementation "com.github.hotchemi:permissionsdispatcher:4.1.0"
-    kapt "com.github.hotchemi:permissionsdispatcher-processor:4.1.0"
+    implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
+    kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
     implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
     // implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
 }
