--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
     implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
-    // implementation 'com.google.android.material:material:1.0.0'
-    // implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
+    implementation 'us.feras.mdv:markdownview:1.1.0'
+    implementation "ru.noties:markwon:${markwon_version}"
+    implementation "ru.noties:markwon-image-loader:${markwon_version}"
+//    implementation "ru.noties:markwon-view:${markwon_version}"
+//     implementation 'com.google.android.material:material:1.0.0'
+//     implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
 }
