--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,53 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.pierbezuhoff.dodeca" >
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <permission-group android:name="android.permission-group.STORAGE" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.pierbezuhoff.dodeca">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <permission-group android:name="android.permission-group.STORAGE"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-    >
+            android:theme="@style/AppTheme">
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="locked"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter android:priority="100">
-                <data android:host="*" />
-                <data android:mimeType="*/*" />
+                <data android:host="*"/>
+                <data android:mimeType="*/*"/>
                 <!-- v possibly useless -->
-                <data android:mimeType="application/ddu" />
-                <data android:mimeType="application/vnd.ddu" />
-                <data android:mimeType="application/octet-stream" />
+                <data android:mimeType="application/ddu"/>
+                <data android:mimeType="application/vnd.ddu"/>
+                <data android:mimeType="application/octet-stream"/>
                 <!-- ^ -->
-                <data android:pathPattern=".*\\.ddu" />
-                <data android:pathPattern=".*\\.DDU" />
-                <data android:scheme="content" />
-                <data android:scheme="file" />
-                <data android:scheme="http" />
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.EDIT" />
-                <category android:name="android.intent.category.DEFAULT" />
-                 <category android:name="android.intent.category.BROWSABLE" />
+                <data android:pathPattern=".*\\.ddu"/>
+                <data android:pathPattern=".*\\.DDU"/>
+                <data android:scheme="content"/>
+                <data android:scheme="file"/>
+                <data android:scheme="http"/>
+
+                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.EDIT"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity">
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SEND"/>
             </intent-filter>
         </activity>
         <activity android:name=".DDUChooserActivity">
         </activity>
+        <activity android:name=".HelpActivity">
+        </activity>
     </application>
-</manifest>
 
+</manifest>
