--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.11'
     ext.anko_version = '0.10.7'
+    ext.markwon_version = '2.0.1'
     ext.permission_dispatcher_version = '4.1.0'
     repositories {
         google()
