--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,10 @@ android {
     }
     flavorDimensions "version"
     productFlavors {
-        demo {
-            dimension "version"
-            applicationIdSuffix ".demo"
-            versionNameSuffix "-demo"
+        standard {
         }
-        full {
-            dimension "version"
-            applicationIdSuffix ".full"
-            versionNameSuffix "-full"
+        beta {
+            versionNameSuffix '-beta'
         }
     }
 }
@@ -63,6 +58,6 @@ dependencies {
     implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
     implementation 'com.pavelsikun:material-seekbar-preference:2.3.0'
-//     implementation 'com.google.android.material:material:1.0.0'
-//     implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
+    //     implementation 'com.google.android.material:material:1.0.0'
+    //     implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
 }
