--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+    >
         <!--android:screenOrientation="locked"-->
         <activity
                 android:name=".MainActivity"
@@ -25,9 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter android:priority="100">
+                <!-- v possibly useless -->
                 <data android:host="*"/>
                 <data android:mimeType="*/*"/>
-                <!-- v possibly useless -->
                 <data android:mimeType="application/ddu"/>
                 <data android:mimeType="application/vnd.ddu"/>
                 <data android:mimeType="application/octet-stream"/>
@@ -50,10 +51,8 @@
                 <action android:name="android.intent.action.SEND"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DDUChooserActivity">
-        </activity>
-        <activity android:name=".HelpActivity">
-        </activity>
+        <activity android:name=".DDUChooserActivity"/>
+        <activity android:name=".HelpActivity"/>
     </application>
 
 </manifest>
