--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         applicationId "com.pierbezuhoff.dodeca"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 7
+        versionCode 8
         versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -56,7 +56,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
+    implementation 'com.rarepebble:colorpicker:2.4.2'
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
-    //     implementation 'com.google.android.material:material:1.0.0'
-    //     implementation 'com.jaredrummler:colorpicker-compat:1.0.5'
 }
