--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.7'
+    ext.lifecycle_version = '2.1.0-alpha04'
     ext.permission_dispatcher_version = '4.1.0'
-    ext.room_version = '2.1.0-alpha04'
+    ext.room_version = '2.1.0-alpha06'
     repositories {
         google()
         jcenter()
