--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 21
-        versionName "1.4" // <-> values/strings.xml <-> values-ru/strings.xml
+        versionName "1.4" // <-> (values, values-ru)/strings.xml/version_name
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
