--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:theme="@style/AppTheme"
     >
         <activity
-                android:name=".MainActivity"
+                android:name=".ui.MainActivity"
                 android:label="@string/app_name"
                 android:configChanges="orientation|screenSize"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
@@ -46,13 +46,13 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity">
+        <activity android:name=".ui.SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DDUChooserActivity"/>
-        <activity android:name=".HelpActivity"/>
+        <activity android:name=".ui.DDUChooserActivity"/>
+        <activity android:name=".ui.HelpActivity"/>
     </application>
 
 </manifest>
