--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,25 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-    >
+            android:theme="@style/AppTheme">
+        <activity
+                android:name=".ui.FullscreenActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:label="@string/title_activity_fullscreen"
+                android:theme="@style/FullscreenTheme">
+        </activity>
         <activity
                 android:name=".ui.MainActivity"
-                android:label="@string/app_name"
                 android:configChanges="orientation|screenSize"
+                android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter android:priority="100">
+
                 <!-- v possibly useless -->
                 <data android:host="*"/>
                 <data android:mimeType="*/*"/>
@@ -53,6 +60,7 @@
         </activity>
         <activity android:name=".ui.DDUChooserActivity"/>
         <activity android:name=".ui.HelpActivity"/>
+        <activity android:name=".ui.DodecaEditActivity"/>
     </application>
 
 </manifest>
