--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,6 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".ui.FullscreenActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:label="@string/title_activity_fullscreen"
-                android:theme="@style/FullscreenTheme">
-        </activity>
-        <activity
                 android:name=".ui.MainActivity"
                 android:configChanges="orientation|screenSize"
                 android:label="@string/app_name"
@@ -53,6 +47,8 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.DodecaEditActivity">
+        </activity>
         <activity android:name=".ui.SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
@@ -60,7 +56,6 @@
         </activity>
         <activity android:name=".ui.DDUChooserActivity"/>
         <activity android:name=".ui.HelpActivity"/>
-        <activity android:name=".ui.DodecaEditActivity"/>
     </application>
 
 </manifest>
