--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
-    ext.anko_version = '0.10.7'
-    ext.permission_dispatcher_version = '4.1.0'
-    ext.room_version = '2.1.0-alpha07'
+    ext {
+        kotlin_version = '1.3.31'
+        anko_version = '0.10.7'
+        permission_dispatcher_version = '4.1.0'
+        room_version = '2.1.0-alpha07'
+        lifecycle_version = '2.1.0-alpha04'
+    }
     repositories {
         google()
         jcenter()
