--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         kotlin_version = '1.3.31'
         anko_version = '0.10.7'
         permission_dispatcher_version = '4.1.0'
-        room_version = '2.1.0-alpha07'
-        lifecycle_version = '2.1.0-alpha04'
+        room_version = '2.1.0-beta01'
+        lifecycle_version = '2.2.0-alpha01'
     }
     repositories {
         google()
