--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,14 @@ buildscript {
         permission_dispatcher_version = '4.1.0'
         room_version = '2.1.0-beta01'
         lifecycle_version = '2.2.0-alpha01'
+        kotlin_coroutines_version = '1.2.1'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
