--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
     implementation 'com.rarepebble:colorpicker:2.4.2'
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
-    implementation "androidx.room:room-runtime:$room_version" // for abstraction over SQLite database
+    implementation "androidx.room:room-ktx:$room_version" // for abstraction over SQLite database
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
