--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
         targetSdkVersion 28
         versionCode 27
         versionName "1.4.2" // <-> (values, values-ru)/strings.xml/version_name
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -61,7 +66,7 @@ dependencies {
     implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
     implementation 'com.rarepebble:colorpicker:2.4.2'
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
-    implementation "androidx.room:room-ktx:$room_version" // for abstraction over SQLite database
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
