--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".ui.MainActivity"
-                android:configChanges="orientation|screenSize"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
+            <!--android:configChanges="orientation|screenSize"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
