--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
                 android:name=".ui.MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar"> <!-- android:style/Theme.NoTitleBar.Fullscreen"> -->
+                android:theme="@style/AppTheme.NoActionBar"
+        >
             <!--android:configChanges="orientation|screenSize"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
