--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ android {
     dataBinding {
         enabled true
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
