--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,14 +12,14 @@ android {
             storePassword '<REDACTED>'
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.pierbezuhoff.dodeca"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 33
         multiDexEnabled true
         versionCode 39
-        versionName "1.5.1.2" // <-> (values, values-ru)/strings.xml/version_name
+        versionName "2.0" // <-> (values, values-ru)/strings.xml/version_name
         kapt {
             arguments {
                 arg("room.schemaLocation", "$projectDir/schemas".toString())
@@ -57,17 +57,15 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0-alpha01'
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.9.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.6.0-alpha05'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha03'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-beta01'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
@@ -77,11 +75,11 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'org.apache.commons:commons-io:1.3.2'
-    implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version"
-    kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
+    implementation "com.github.permissions-dispatcher:permissionsdispatcher:$permission_dispatcher_version"
+    kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:$permission_dispatcher_version"
     implementation 'com.rarepebble:colorpicker:2.4.2'
     implementation 'androidx.multidex:multidex:2.0.1'
-    // no test for now vvv
+    // no tests for now vvv
 //    testImplementation 'junit:junit:4.13-beta-3'
 //    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
