--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,20 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.40'
-        lifecycle_version = '2.2.0'
-        room_version = '2.2.3'
+        kotlin_version = '1.7.10'
+        lifecycle_version = '2.5.1'
+        room_version = '2.4.3'
         anko_version = '0.10.7'
-        permission_dispatcher_version = '4.1.0'
-        kotlin_coroutines_version = '1.2.1'
+        permission_dispatcher_version = '4.9.2'
+        kotlin_coroutines_version = '1.6.1'
     }
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,8 +26,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        maven { url "https://jitpack.io" }
+//        maven { url "https://jitpack.io" }
     }
 }
 
