ready to connect editor to DodecaViewActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar"
                 android:exported="true"
+                android:noHistory="true"
         >
 
             <!-- android:configChanges="orientation|screenSize" -->
