--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:$permission_dispatcher_version"
     implementation 'com.rarepebble:colorpicker:2.4.2'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "org.jetbrains.kotlinx:multik-core:$multik_version"
+    implementation "org.jetbrains.kotlinx:multik-default:$multik_version"
     // no tests for now vvv
 //    testImplementation 'junit:junit:4.13-beta-3'
 //    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
