fixing kt_ext deprecated dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ android {
             versionNameSuffix '-beta'
         }
     }
-    dataBinding {
-        enabled true
+    buildFeatures {
+        dataBinding true
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
