clean up  more editor sht

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,12 +60,12 @@
                 android:theme="@style/AppTheme.NoActionBar"
         >
         </activity>
-        <activity
-                android:name=".ui.dodecaedit.DodecaEditActivity"
-                android:exported="false"
-                android:theme="@style/AppTheme.NoActionBar"
-                >
-        </activity>
+<!--        <activity-->
+<!--                android:name=".ui.dodecaedit.DodecaEditActivity"-->
+<!--                android:exported="false"-->
+<!--                android:theme="@style/AppTheme.NoActionBar"-->
+<!--                >-->
+<!--        </activity>-->
         <activity android:name=".ui.settings.SettingsActivity" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
