--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.pierbezuhoff.dodeca"
+        >
 
-    <uses-permission
-            android:name="android.permission.READ_EXTERNAL_STORAGE"
-            />
-    <uses-permission
-            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-            />
-
-    <supports-screens
-            android:smallScreens="true"
-            android:normalScreens="true"
-            android:largeScreens="true"
-            android:xlargeScreens="true"
-            android:anyDensity="true"
-    />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <permission-group android:name="android.permission-group.STORAGE"/>
 
     <application
             android:name="androidx.multidex.MultiDexApplication"
@@ -24,9 +15,9 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:requestLegacyExternalStorage="true"
             android:theme="@style/AppTheme"
     >
+<!--        android:requestLegacyExternalStorage="true"-->
         <activity
                 android:name=".ui.MainActivity"
                 android:label="@string/app_name"
